# fileverse

./: .gitignore  README.md  commit.sh  setup.sh  start.sh
backend/: pyproject.toml
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: files.py
backend/app/core/: config.py
backend/app/schemas/: agentic.py
backend/app/services/: s3_service.py
backend/app/services/agentic/: document_loader.py  embeddings_factory.py  rag_pipeline.py  vector_store.py
frontend-new/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend-new/src/: index.html
frontend-new/src/app/: app.component.ts  app.config.ts  app.html  app.scss  app.spec.ts  app.ts
frontend-new/src/app/components/file-upload/: file-upload.component.html  file-upload.component.ts
frontend-new/src/app/components/gallery/: gallery.component.html  gallery.component.ts
frontend-new/src/app/pipes/: file-size.pipe.ts
frontend-new/src/app/services/: file.service.ts
