[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.36",
    "fastapi[standard]>=0.115.12",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-pinecone>=0.2.8",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.8.0",
]
